added css styling and updated information

--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>My Portfolio</h1>
-    <a href="about.html"> About Me</a>
+    <h2>👋 Hi I am</h2>
+    <h1>Rosie Miller</h1>
+    <h3> Front-end developer, based in the UK</h3>
+    <div class="pages">
+      <a href="about.html#contact" class="contact-link"> Contact Me </a>
+      <br />
+    <a href="about.html#about" class="about-link" > About Me</a>
     <br />
-    <a href="work.html"> Work </a>
-    <br />
-    <a href="blog/norway-trip.html"> Trip to Norway</a>
+ 
   </body>
+
+  </div>
 </html>
+<script src="script/index.js"></script>
