--- a/about.html
+++ b/about.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>About Rosie Miller</title>
   </head>
   <body>
+    <a href="index.html" class="homepage-link"> Back to Homepage</a></div>
+    <div id="about"></div>
     <h1>About Me</h1>
-    <a href="index.html"> Back to Homepage</a>
+    <h3> Front-end developer from Oxfordshire, UK</h3>
+    </div>
+    <div class="about-paragraphs"> 
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
+
+    
+    <br/>
+    <br/>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
+
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
+
+        <br/>
+    <br/>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
+
+    </div>
+  
+    <div id="contact">
+  <h2> 📧 Contact Me </h2>
+  <a href="mailto:rosiekg1237@googlemail.com" class="email-link">Email</a>
+
+  </div>
+  
   </body>
 </html>
