--- a/about.html
+++ b/about.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+ <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@500&family=Rock+Salt&display=swap" rel="stylesheet">
     <title>About Rosie Miller</title>
   </head>
   <body>
@@ -34,7 +37,7 @@
   
     <div id="contact">
   <h2> 📧 Contact Me </h2>
-  <a href="mailto:rosiekg1237@googlemail.com" class="email-link">Email</a>
+  <a href="mailto:milleniumlabs.rosie@gmail.com" class="email-link">milleniumlabs.rosie@gmail.com</a>
 
   </div>
   
