--- a/index.html
+++ b/index.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Rosie Miller - Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@500&family=Rock+Salt&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand fs-2" href="#">Rosie Miller</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active fs-2" aria-current="page" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link fs-2" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link fs-2" href="about.html#contact">Contact</a>
+        </li>
+            </ul>
+    </div>
+  </div>
+</nav>
+
     <h2>👋 Hi I am</h2>
     <h1>Rosie Miller</h1>
     <h3> Front-end developer, based in the UK</h3>
@@ -19,9 +42,22 @@
       <br />
     <a href="about.html#about" class="about-link" > About Me</a>
     <br />
- 
-  </body>
-
+   </body>
   </div>
+
+  <div class="container">
+<div class="row">
+<div class="col-md-6">
+  <img src="images/Volunteer.JPG" class="img-fluid rounded">
+</div> 
+<div class="col-md-6"> 
+  <h2 class="mb-3">Volunteering Information Page</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
+<div class="mt-3">
+  <a href="#" class="contact-link"> Launch Volunteer Page</a>
+</div>
+  </div>
+
 </html>
 <script src="script/index.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
