formatted pictures with links and grids

--- a/about.html
+++ b/about.html
@@ -39,28 +39,37 @@
     <h3> Front-end developer from Oxfordshire, UK</h3>
     </div>
     <div class="about-paragraphs"> 
-    <p>
+    <p class="text-box">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
-
-    
-    <br/>
-    <br/>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
-
     </p>
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
+     </div>  
 
-        <br/>
-    <br/>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
+<div class="container">
+<div class="row">
+<div class="col-sm-3">
+  <img src="images/Volunteer.JPG" class="img-fluid p-2 shadow rounded">
+</div>
+<div class="col-sm-3">
+  <img src="images/crochet.JPG" class="img-fluid p-2 shadow rounded">
+</div>
+<div class="col-sm-3">
+  <img src="images/weather.JPG" class="img-fluid p-2 shadow rounded">
+</div>
+<div class="col-sm-3">
+  <img src="images/clock.JPG" class="img-fluid p-2 shadow rounded">
+</div>
+</div>
+</div>
 
-    </div>
-  
-    <div id="contact">
+
+
+
+
+
+
+     <div id="contact">
   <h2> 📧 Contact Me </h2>
   <a href="mailto:milleniumlabs.rosie@gmail.com" class="email-link">milleniumlabs.rosie@gmail.com</a>
-
   </div>
   
   </body>
