--- a/index.html
+++ b/index.html
@@ -51,12 +51,65 @@
   <img src="images/Volunteer.JPG" class="img-fluid rounded">
 </div> 
 <div class="col-md-6"> 
-  <h2 class="mb-3">Volunteering Information Page</h2>
+  <h2 class="mb-1 fs-1">Volunteering Information Page</h2>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
 <div class="mt-3">
-  <a href="#" class="contact-link"> Launch Volunteer Page</a>
+    <a href="https://www.shecodes.io/workshops/shecodes-basics-a0b33cd6-9dfc-4cea-bd4b-6ea3d75f7132/projects/1290574" class="contact-link link-button"> Launch Volunteer Page</a> 
 </div>
   </div>
+</div>
+</div>
+
+<div class="row mt-5"></div>
+
+<div class="container">
+<div class="row">
+<div class="col-md-6">
+  <h2 class="mb-1 fs-1"> Crochet Facts Page</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
+  <div class="mt-3">
+    <a href="http://shecodes.io/workshops/shecodes-basics-add-on-fed33280-e631-4097-92ce-c31484fc32c0/projects/1297231" class="contact-link link-button"> Launch Crochet Facts Page</a>
+  </div>
+</div>
+<div class="col-md-6">
+  <img src="images/crochet.JPG" class="img-fluid rounded">
+</div>
+</div>
+</div>
+
+ <div class="row mt-5"></div>
+
+<div class="container">
+<div class="row">
+<div class="col-md-6">
+  <img src="images/weather.JPG" class="img-fluid rounded">
+</div> 
+<div class="col-md-6"> 
+  <h2 class="mb-1 fs-1">Weather App Page</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
+<div class="mt-3">
+    <a href="https://www.shecodes.io/workshops/shecodes-plus-6f8bc25d-1880-4044-8ebf-7cb0947849c5/projects/1411138" class="contact-link link-button"> Launch Weather App Page</a> 
+</div>
+  </div>
+</div>
+</div>
+
+<div class="row mt-5"></div>
+
+<div class="container">
+<div class="row">
+<div class="col-md-6">
+  <h2 class="mb-1 fs-1"> World Clock Page</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
+  <div class="mt-3">
+    <a href="http://shecodes.io/workshops/shecodes-plus-add-on-b0f43bca-c8f7-463d-aa61-1f9c856c7957/projects/1441586" class="contact-link link-button"> Launch World Clock Page</a>
+  </div>
+</div>
+<div class="col-md-6">
+  <img src="images/clock.JPG" class="img-fluid rounded">
+</div>
+</div>
+</div>
 
 </html>
 <script src="script/index.js"></script>
