--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rosie Miller - Portfolio</title>
-    <link rel="stylesheet" href="style.css" />
+ 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@500&family=Rock+Salt&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-  </head>
+   <link rel="stylesheet" href="/css/style.css" />  
+</head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
@@ -36,11 +37,11 @@
 
     <h2>👋 Hi I am</h2>
     <h1>Rosie Miller</h1>
-    <h3> Front-end developer, based in the UK</h3>
+    <h3> Front-end developer, based in UK</h3>
     <div class="pages">
-      <a href="about.html#contact" class="contact-link"> Contact Me </a>
+      <a href="/about.html#contact" class="contact-link"> Contact Me </a>
       <br />
-    <a href="about.html#about" class="about-link" > About Me</a>
+    <a href="/about.html#about" class="about-link" > About Me</a>
     <br />
    </body>
   </div>
