--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfolio of web designed projects by Rosie Miller"/>
     <title>Rosie Miller - Portfolio</title>
  
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +14,7 @@
    <link rel="stylesheet" href="/css/style.css" />  
 </head>
   <body>
+    
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand fs-2" href="#">Rosie Miller</a>
