--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <link rel="stylesheet" href="/css/style.css" />  
 </head>
   <body>
-    
+
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand fs-2" href="#">Rosie Miller</a>
@@ -51,7 +51,7 @@
   <div class="container">
 <div class="row">
 <div class="col-md-6">
-  <img src="images/Volunteer.JPG" class="img-fluid rounded">
+  <img src="images/Volunteer.JPG" alt="Volunteer website homepage" class="img-fluid rounded">
 </div> 
 <div class="col-md-6"> 
   <h2 class="mb-1 fs-1">Volunteering Information Page</h2>
@@ -75,7 +75,7 @@
   </div>
 </div>
 <div class="col-md-6">
-  <img src="images/crochet.JPG" class="img-fluid rounded">
+  <img src="images/crochet.JPG" alt="Crochet website homepage" class="img-fluid rounded">
 </div>
 </div>
 </div>
@@ -85,7 +85,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-6">
-  <img src="images/weather.JPG" class="img-fluid rounded">
+  <img src="images/weather.JPG" alt="Weather app website homepage" class="img-fluid rounded">
 </div> 
 <div class="col-md-6"> 
   <h2 class="mb-1 fs-1">Weather App Page</h2>
@@ -109,7 +109,7 @@
   </div>
 </div>
 <div class="col-md-6">
-  <img src="images/clock.JPG" class="img-fluid rounded">
+  <img src="images/clock.JPG" alt="world clock website homepage" class="img-fluid rounded">
 </div>
 </div>
 </div>
