--- a/about.html
+++ b/about.html
@@ -47,16 +47,16 @@
 <div class="container">
 <div class="row">
 <div class="col-sm-3">
-  <img src="images/Volunteer.JPG" class="img-fluid p-2 shadow rounded">
+  <img src="/images/Volunteer.JPG" class="img-fluid p-2 shadow rounded">
 </div>
 <div class="col-sm-3">
-  <img src="images/crochet.JPG" class="img-fluid p-2 shadow rounded">
+  <img src="/images/crochet.JPG" class="img-fluid p-2 shadow rounded">
 </div>
 <div class="col-sm-3">
-  <img src="images/weather.JPG" class="img-fluid p-2 shadow rounded">
+  <img src="/images/weather.JPG" class="img-fluid p-2 shadow rounded">
 </div>
 <div class="col-sm-3">
-  <img src="images/clock.JPG" class="img-fluid p-2 shadow rounded">
+  <img src="/images/clock.JPG" class="img-fluid p-2 shadow rounded">
 </div>
 </div>
 </div>
