--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Portfolio of web designed projects by Rosie Miller"/>
-    <title>Rosie Miller - Portfolio</title>
+    <title>Rosie Miller - Portfolio of Developer projects</title>
  
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,13 +24,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active fs-2" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link active fs-2" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-2" href="about.html">About</a>
+          <a class="nav-link fs-2" href="/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-2" href="about.html#contact">Contact</a>
+          <a class="nav-link fs-2" href="/about.html#contact">Contact</a>
         </li>
             </ul>
     </div>
@@ -51,7 +51,7 @@
   <div class="container">
 <div class="row">
 <div class="col-md-6">
-  <img src="images/Volunteer.JPG" alt="Volunteer website homepage" class="img-fluid rounded">
+  <img src="/images/Volunteer.JPG" alt="Volunteer website homepage" class="img-fluid rounded">
 </div> 
 <div class="col-md-6"> 
   <h2 class="mb-1 fs-1">Volunteering Information Page</h2>
@@ -75,7 +75,7 @@
   </div>
 </div>
 <div class="col-md-6">
-  <img src="images/crochet.JPG" alt="Crochet website homepage" class="img-fluid rounded">
+  <img src="/images/crochet.JPG" alt="Crochet website homepage" class="img-fluid rounded">
 </div>
 </div>
 </div>
@@ -85,7 +85,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-6">
-  <img src="images/weather.JPG" alt="Weather app website homepage" class="img-fluid rounded">
+  <img src="/images/weather.JPG" alt="Weather app website homepage" class="img-fluid rounded">
 </div> 
 <div class="col-md-6"> 
   <h2 class="mb-1 fs-1">Weather App Page</h2>
@@ -109,7 +109,7 @@
   </div>
 </div>
 <div class="col-md-6">
-  <img src="images/clock.JPG" alt="world clock website homepage" class="img-fluid rounded">
+  <img src="/images/clock.JPG" alt="world clock website homepage" class="img-fluid rounded">
 </div>
 </div>
 </div>
