added homepage content

--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
   </div>
 </nav>
 
-    <h2>👋 Hi I am</h2>
-    <h1>Rosie Miller</h1>
+        <h1>Rosie Miller</h1>
     <h3> Front-end developer, based in UK</h3>
     <div class="pages">
       <a href="/about.html#contact" class="contact-link"> Contact Me </a>
@@ -55,7 +54,7 @@
 </div> 
 <div class="col-md-6"> 
   <h2 class="mb-1 fs-1">Volunteering Information Page</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
+<p>A webpage designed using HTML, CSS and JavaScript to give some information about Volunteering with the Girlguiding Organisation in the UK. Completed as part of the SheCodes Basic course. </p>
 <div class="mt-3">
     <a href="https://www.shecodes.io/workshops/shecodes-basics-a0b33cd6-9dfc-4cea-bd4b-6ea3d75f7132/projects/1290574" class="contact-link link-button"> Launch Volunteer Page</a> 
 </div>
@@ -69,7 +68,7 @@
 <div class="row">
 <div class="col-md-6">
   <h2 class="mb-1 fs-1"> Crochet Facts Page</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
+  <p>A website showcasing new techniques such as Dark/Light Mode and image transformation using HTML, CSS and JavaScript on the subject of a favourite hobby, crochet! This was completed for the SheCodes Basic Add On course. </p>
   <div class="mt-3">
     <a href="http://shecodes.io/workshops/shecodes-basics-add-on-fed33280-e631-4097-92ce-c31484fc32c0/projects/1297231" class="contact-link link-button"> Launch Crochet Facts Page</a>
   </div>
@@ -85,11 +84,11 @@
 <div class="container">
 <div class="row">
 <div class="col-md-6">
-  <img src="/images/weather.JPG" alt="Weather app website homepage" class="img-fluid rounded">
+  <img src="/images/Weather2.JPG" alt="Weather app website homepage" class="img-fluid rounded">
 </div> 
 <div class="col-md-6"> 
   <h2 class="mb-1 fs-1">Weather App Page</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
+<p> A Weather App using HTML, CSS, JavaScript, APIs & Bootstrap. GitHub and Netlify are used to host the website. The weather app can give you a variety of weather information from around the world or your current location and gives a 7 day forecast. Completed as part of the SheCodes Plus course. </p>
 <div class="mt-3">
     <a href="https://www.shecodes.io/workshops/shecodes-plus-6f8bc25d-1880-4044-8ebf-7cb0947849c5/projects/1411138" class="contact-link link-button"> Launch Weather App Page</a> 
 </div>
@@ -103,7 +102,7 @@
 <div class="row">
 <div class="col-md-6">
   <h2 class="mb-1 fs-1"> World Clock Page</h2>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo eum dolore. </p>
+  <p>A World Clock website giving live times from time zones around the world using HTML, CSS< JavaScript and APIs. Completed as part of the SheCode Pluss Add On Course. </p>
   <div class="mt-3">
     <a href="http://shecodes.io/workshops/shecodes-plus-add-on-b0f43bca-c8f7-463d-aa61-1f9c856c7957/projects/1441586" class="contact-link link-button"> Launch World Clock Page</a>
   </div>
