addition of images

--- a/about.html
+++ b/about.html
@@ -38,6 +38,8 @@
     <h1>About Me</h1>
     <h3> Front-end developer from Oxfordshire, UK</h3>
     </div>
+    
+    <img src="/images/selfie.jpg" alt="Selfie" class="selfie"> 
     <div class="about-paragraphs"> 
     <p class="text-box">
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
@@ -53,7 +55,7 @@
   <img src="/images/crochet.JPG" class="img-fluid p-2 shadow rounded">
 </div>
 <div class="col-sm-3">
-  <img src="/images/weather.JPG" class="img-fluid p-2 shadow rounded">
+  <img src="/images/Weather2.JPG" class="img-fluid p-2 shadow rounded">
 </div>
 <div class="col-sm-3">
   <img src="/images/clock.JPG" class="img-fluid p-2 shadow rounded">
