--- a/index.html
+++ b/index.html
@@ -38,19 +38,22 @@
 </nav>
 
         <h1>Rosie Miller</h1>
-    <h3> Front-end developer, based in UK</h3>
+    <h3> Front-end developer, based in Oxfordshire, UK</h3>
     <div class="pages">
       <a href="/about.html#contact" class="contact-link"> Contact Me </a>
       <br />
     <a href="/about.html#about" class="about-link" > About Me</a>
     <br />
+    <br/>
    </body>
   </div>
 
   <div class="container">
 <div class="row">
 <div class="col-md-6">
-  <img src="/images/Volunteer.JPG" alt="Volunteer website homepage" class="img-fluid rounded">
+  <div class="grid">
+     <img src="/images/Volunteer.JPG" alt="Volunteer website homepage" class="img-fluid rounded">
+</div>
 </div> 
 <div class="col-md-6"> 
   <h2 class="mb-1 fs-1">Volunteering Information Page</h2>
@@ -74,7 +77,9 @@
   </div>
 </div>
 <div class="col-md-6">
+  <div class="grid">
   <img src="/images/crochet.JPG" alt="Crochet website homepage" class="img-fluid rounded">
+</div>
 </div>
 </div>
 </div>
@@ -108,7 +113,9 @@
   </div>
 </div>
 <div class="col-md-6">
+  <div class="grid">
   <img src="/images/clock.JPG" alt="world clock website homepage" class="img-fluid rounded">
+</div>
 </div>
 </div>
 </div>
