--- a/about.html
+++ b/about.html
@@ -41,10 +41,11 @@
     
     <img src="/images/selfie.jpg" alt="Selfie" class="selfie"> 
     <div class="about-paragraphs"> 
-    <p class="text-box">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
-    </p>
-     </div>  
+      <p class="text-box">
+        Hi, my name is Rosie and I am a front-end developer based in Oxfordshire, UK. I started my coding journey in November 2022 with SheCodes and have been developing my skills through a variety of project which are showcased on this portfolio website. In my free time, I enjoy volunteering with Girlguiding (as you can see in my first coding project) and i also enjoy reading and crafting (also shown in my coding projects). Thank you for checking oout my website!
+      </p>
+    </div>  
+    <div class="pages"><a href="/#" class="about-link" > See My Projects</a></div>
 
 <div class="container">
 <div class="row">
