--- a/about.html
+++ b/about.html
@@ -29,6 +29,9 @@
         <li class="nav-item">
           <a class="nav-link fs-2" href="/about.html#contact">Contact</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link fs-2" href="/work.html">Work</a>
+        </li>
             </ul>
     </div>
   </div>
