--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <li class="nav-item">
           <a class="nav-link fs-2" href="/about.html#contact">Contact</a>
         </li>
+         <li class="nav-item">
+          <a class="nav-link fs-2" href="/work.html">Work</a>
+        </li>
             </ul>
     </div>
   </div>
@@ -52,7 +55,7 @@
 <div class="row">
 <div class="col-md-6">
   <div class="grid">
-     <img src="/images/Volunteer.JPG" alt="Volunteer website homepage" class="img-fluid rounded">
+     <img src="/images/Volunteer.png" alt="Volunteer website homepage" class="img-fluid rounded">
 </div>
 </div> 
 <div class="col-md-6"> 
@@ -78,7 +81,7 @@
 </div>
 <div class="col-md-6">
   <div class="grid">
-  <img src="/images/crochet.JPG" alt="Crochet website homepage" class="img-fluid rounded">
+  <img src="/images/crochet.png" alt="Crochet website homepage" class="img-fluid rounded">
 </div>
 </div>
 </div>
@@ -89,7 +92,7 @@
 <div class="container">
 <div class="row">
 <div class="col-md-6">
-  <img src="/images/Weather2.JPG" alt="Weather app website homepage" class="img-fluid rounded">
+  <img src="/images/Weather2.png" alt="Weather app website homepage" class="img-fluid rounded">
 </div> 
 <div class="col-md-6"> 
   <h2 class="mb-1 fs-1">Weather App Page</h2>
@@ -107,14 +110,14 @@
 <div class="row">
 <div class="col-md-6">
   <h2 class="mb-1 fs-1"> World Clock Page</h2>
-  <p>A World Clock website giving live times from time zones around the world using HTML, CSS< JavaScript and APIs. Completed as part of the SheCode Pluss Add On Course. </p>
+  <p>A World Clock website giving live times from time zones around the world using HTML, CSS, JavaScript and APIs. Completed as part of the SheCode Pluss Add On Course. </p>
   <div class="mt-3">
     <a href="http://shecodes.io/workshops/shecodes-plus-add-on-b0f43bca-c8f7-463d-aa61-1f9c856c7957/projects/1441586" class="contact-link link-button"> Launch World Clock Page</a>
   </div>
 </div>
 <div class="col-md-6">
   <div class="grid">
-  <img src="/images/clock.JPG" alt="world clock website homepage" class="img-fluid rounded">
+  <img src="/images/clock.png" alt="world clock website homepage" class="img-fluid rounded">
 </div>
 </div>
 </div>
