contact page edit

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a class="nav-link fs-2" href="/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-2" href="/about.html#contact">Contact</a>
+          <a class="nav-link fs-2" href="/contact.html">Contact</a>
         </li>
          <li class="nav-item">
           <a class="nav-link fs-2" href="/work.html">Work</a>
@@ -43,7 +43,7 @@
         <h1>Rosie Miller</h1>
     <h3> Front-end developer, based in Oxfordshire, UK</h3>
     <div class="pages">
-      <a href="/about.html#contact" class="contact-link"> Contact Me </a>
+      <a href="/contact.html" class="contact-link"> Contact Me </a>
       <br />
     <a href="/about.html#about" class="about-link" > About Me</a>
     <br />
