--- a/contact.html
+++ b/contact.html
@@ -38,17 +38,18 @@
 </nav>
  
     <div id="about"></div>
-    <h1>About Me</h1>
+    <h1>Contact Me</h1>
+    <br/>
     <h3> Front-end developer from Oxfordshire, UK</h3>
+    <br/>
     </div>
+    <h2> Let's get in touch! </h2>
     
     <img src="/images/selfie.jpg" alt="Selfie" class="selfie"> 
+
     <div class="about-paragraphs"> 
-      <p class="text-box">
-        Hi, my name is Rosie Miller and I am a front-end developer based in Oxfordshire, UK. I started my coding journey in November 2022 with SheCodes and have been developing my skills through a variety of projects which are showcased on this portfolio website. In my free time, I enjoy volunteering with Girlguiding (as you can see in my first coding project) and I also enjoy reading and crafting (also shown in my coding projects). Thank you for checking out my website!
-      </p>
+      
     </div>  
-    <div class="pages"><a href="/#" class="about-link" > See My Projects</a></div>
 
 
 
@@ -56,7 +57,16 @@
 
 
 
->
+
+     <div id="contact">
+  <h2 class="contact-title"> 📧 Contact Me </h2>
+  <h2> Email</h2>
+  <a href="mailto:milleniumlabs.rosie@gmail.com" class="email-link">milleniumlabs.rosie@gmail.com</a>
+  
+   <h2> LinkedIn </h2>
+  <a href="https://www.linkedin.com/in/rosie-miller-0019438a/" class="email-link"> Rosie Miller </a>
+  <br/>
+  </div>
   
   </body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
