--- a/work.html
+++ b/work.html
@@ -30,7 +30,7 @@
           <a class="nav-link fs-2" href="/about.html">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-2" href="/about.html#contact">Contact</a>
+          <a class="nav-link fs-2" href="/contact.html">Contact</a>
         </li>
           <li class="nav-item">
           <a class="nav-link fs-2" href="/work.html">Work</a>
