--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   <body>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand fs-2" href="#">Rosie Miller</a>
+    <a class="navbar-brand fs-2" href="#">RM</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
