--- a/work.html
+++ b/work.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand fs-2" href="#">Rosie Miller</a>
+    <a class="navbar-brand fs-2" href="#">RM</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -41,6 +41,7 @@
 </nav>
 
         <h1>Rosie Miller</h1>
+        <br/>
     <h3> Take a look at what I've been working on! </h3>
     <br/>
     <br/>
