--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@500&family=Rock+Salt&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+     <script src="https://kit.fontawesome.com/55742e9a44.js" crossorigin="anonymous"></script>
     <title>About Rosie Miller</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
@@ -57,8 +58,24 @@
 
 
 
->
+<div class="container">
+<footer>
+
+  <div class="mb-3">
+  <a href="mailto:milleniumlabs.rosie@gmail.com" class="footer-email"> milleniumlabs.rosie@gmail.com </a> </div>
+
+  <div class="social-links d-flex justify-content-center mb-5">
+
+<br/>
+  <a href="https://www.linkedin.com/in/rosie-miller-0019438a/"> 
+  <i class="fa-brands fa-linkedin"></i> </a>
+  <a href="https://github.com/rosiekg123">
+  <i class="fa-brands fa-github"></i></a>
   
-  </body>
+</div>
+</footer>
+</div>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </html>
+</body>
