--- a/work.html
+++ b/work.html
@@ -12,6 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@500&family=Rock+Salt&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
    <link rel="stylesheet" href="/css/style.css" />  
+     <script src="https://kit.fontawesome.com/55742e9a44.js" crossorigin="anonymous"></script>
 </head>
   <body>
 
@@ -79,6 +80,26 @@
   
 </div>
    </div>
+
+<div class="container">
+<footer>
+
+  <div class="mb-3">
+  <a href="mailto:milleniumlabs.rosie@gmail.com" class="footer-email"> milleniumlabs.rosie@gmail.com </a> </div>
+
+  <div class="social-links d-flex justify-content-center mb-5">
+
+<br/>
+  <a href="https://www.linkedin.com/in/rosie-miller-0019438a/"> 
+  <i class="fa-brands fa-linkedin"></i> </a>
+  <a href="https://github.com/rosiekg123">
+  <i class="fa-brands fa-github"></i></a>
+  
+</div>
+</footer>
+<br/>
+</div>
+
 </html>
 <script src="script/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
