--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Portfolio of web designed projects by Rosie Miller"/>
+    <meta name="description" content="Portfolio of web designed projects by Rosie Miller. Rosie is a front-end developer based in Oxfordshire, UK."/>
     <title>Rosie Miller - Portfolio of Developer projects</title>
  
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,16 +25,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active fs-2" aria-current="page" href="/">Home</a>
+          <a class="nav-link active fs-2" aria-current="page" href="/" title="Homepage">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-2" href="/about.html">About</a>
+          <a class="nav-link fs-2" href="/about.html" title="About Rosie">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-2" href="/contact.html">Contact</a>
+          <a class="nav-link fs-2" href="/contact.html" title="Contact Rosie">Contact</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link fs-2" href="/work.html">Work</a>
+          <a class="nav-link fs-2" href="/work.html" title="Rosie's Portfolio">Work</a>
         </li>
             </ul>
     </div>
