--- a/about.html
+++ b/about.html
@@ -20,18 +20,18 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active fs-2" aria-current="page" href="/">Home</a>
+          <a class="nav-link fs-2" aria-current="page" href="/" title="Homepage">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-2" href="/about.html">About</a>
+          <a class="nav-link active fs-2" href="/about.html" title="About Rosie">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-2" href="/contact.html">Contact</a>
+          <a class="nav-link fs-2" href="/contact.html" title="Contact Rosie">Contact</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link fs-2" href="/work.html">Work</a>
+          <a class="nav-link fs-2" href="/work.html" title="Rosie's Portfolio">Work</a>
         </li>
             </ul>
     </div>
