--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <div class="row">
 <div class="col-md-6">
   <h2 class="mb-1 fs-1"> World Clock Page</h2>
-  <p>A World Clock website giving live times from time zones around the world using HTML, CSS, JavaScript and APIs. Completed as part of the SheCode Pluss Add On Course. </p>
+  <p>A World Clock website giving live times from time zones around the world using HTML, CSS, JavaScript and APIs. Completed as part of the SheCode Plus Add On Course. </p>
   <div class="mt-3">
     <a href="http://shecodes.io/workshops/shecodes-plus-add-on-b0f43bca-c8f7-463d-aa61-1f9c856c7957/projects/1441586" class="contact-link link-button"> Launch World Clock Page</a>
   </div>
