--- a/index.html
+++ b/index.html
@@ -124,6 +124,41 @@
 </div>
 </div>
 </div>
+<div class="row mt-5"></div>
+
+<div class="container">
+<div class="row">
+<div class="col-md-6">
+  <img src="/images/Rhodes.jpg" alt="Travel Website homepage" class="img-fluid rounded">
+</div> 
+<div class="col-md-6"> 
+  <h2 class="mb-1 fs-1">Travel Website</h2>
+<p> A responsive travel site created using HTML tables and Embeds & CSS Grids. GitHub and Netlify are used to host the website. The travel website gives you information about the Greek island of Rhodes including maps of recommended places to visit and photos embeded from Instagram. Completed as part of the SheCodes Responsive Add On course. . </p>
+<div class="mt-3">
+    <a href="https://reliable-maamoul-9f8ebc.netlify.app/" class="contact-link link-button"> Launch Travel Website</a> 
+</div>
+  </div>
+</div>
+</div>
+
+<div class="row mt-5"></div>
+
+<div class="container">
+<div class="row">
+<div class="col-md-6">
+   <h2 class="mb-1 fs-1">React Weather App Page</h2>
+<p> A Weather App using HTML, CSS, JS React, APIs & Bootstrap. GitHub and Netlify are used to host the website. The weather app can give you a variety of weather information from around the world and gives a 7 day forecast. Completed as part of the SheCodes React course. </p>
+<div class="mt-3">
+    <a href="https://melodic-crostata-9eff50.netlify.app/" class="contact-link link-button"> Launch React Weather App Page</a> 
+</div>
+</div>
+<div class="col-md-6">
+  <div class="grid">
+  <img src="/images/WeatherApp2.jpg" alt="React Weather App website homepage" class="img-fluid rounded">
+</div>
+</div>
+</div>
+</div>
 <br/>
 
 <div class="container">
