--- a/index.html
+++ b/index.html
@@ -159,6 +159,23 @@
 </div>
 </div>
 </div>
+
+<div class="row mt-5"></div>
+
+<div class="container">
+<div class="row">
+<div class="col-md-6">
+  <img src="/images/dictionaryApp.JPG" alt="Dictionary App homepage" class="img-fluid rounded">
+</div> 
+<div class="col-md-6"> 
+  <h2 class="mb-1 fs-1">React Dictionary App</h2>
+<p> A dictionary App using HTML, CSS, JS React, APIs & Bootstrap. GitHub and Netlify are used to host the website. Completed as part of the SheCodes React Add On course. . </p>
+<div class="mt-3">
+    <a href="https://brilliant-eclair-319c6e.netlify.app/" class="contact-link link-button"> Launch Dictionary App</a> 
+</div>
+  </div>
+</div>
+</div>
 <br/>
 
 <div class="container">
