--- a/about.html
+++ b/about.html
@@ -50,7 +50,8 @@
         Hi, my name is Rosie Miller and I am a front-end developer based in Oxfordshire, UK. I started my coding journey in November 2022 with SheCodes and have been developing my skills through a variety of projects which are showcased on this portfolio website. In my free time, I enjoy volunteering with Girlguiding (as you can see in my first coding project) and I also enjoy reading and crafting (also shown in my coding projects). Thank you for checking out my website!
       </p>
     </div>  
-    <div class="pages"><a href="/#" class="about-link" > See My Projects</a></div>
+    <div class="pages"><a href="/#" class="about-link" > See My Projects</a>
+     <a href="Documents/Rosie Miller Web Dev CV.pdf"about-link2" > Resume </a></div>
 
 
 
