--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
       </p>
     </div>  
     <div class="pages"><a href="/#" class="about-link" > See My Projects</a>
-     <a href="Documents/Rosie Miller Web Dev CV.pdf"about-link2" > Resume </a></div>
+     <a href="Documents/Rosie Miller Web Dev CV.pdf" class="about-link2" > Resume </a></div>
 
 
 
